--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,12 @@
+PRE-FALL GOALS
+2. Include the question and answer-level statistics on the results page
+when a student finishes an exam.
+3. Let instructors view the results of individuals, in different contexts.
+4. Let students view their individual results (currently they're only
+seeing class-level donut graphs).
+5. Add links to the question-level results page from the instructor
+question search.
+
 Course Page
 	- allow selecting of multiple tags for question searching
 
@@ -7,11 +16,14 @@ Class page
 Progress Page
 	- remember whether or not an expander was expanded
 	- add links to tag list items
+	- add list of questions taken on the student view
+	- add whole-class and individual tag success to student view
+	- add individual student view to instructor view
 
 Results page
 	- update to include checkmarks representing selection and tag donuts all
 	inside a class='information'
+	- include question-level donut on the left-hand side of the results
 
-Administration
-	- add password reset feature upon request from students
-	- add table for password reset requests
+Student page
+	- adapt student.js to the use of the HTML5 dataset attributes in course-fragment-tags_table.js
